# cominterface

./: CMakeLists.txt  LICENSE.txt  README.md
docs/: doxyfile
docs/html/: annotated.html  class_com_interface-members.html  class_com_interface.html  class_com_serial-members.html  class_com_serial.html  class_com_socket-members.html  class_com_socket.html  classes.html  cominterface_8hpp_source.html  comserial_8cpp.html  comserial_8hpp_source.html  comsocket_8cpp.html  comsocket_8hpp_source.html  dir_3510c73a90392888f5c75e6aff14a83c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_8.js  pages_0.js  searchdata.js
example/: CMakeLists.txt  example-cominterface.cpp
include/: cominterface.h  comserial.h  comsocket.h
include/cominterface/: cominterface.h  cominterface.hpp  comserial.h  comserial.hpp  comsocket.h  comsocket.hpp
src/: comserial.cpp  comsocket.cpp
